# TCC-SmartLight-Presence

./: README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  protocol.c  test
main/ulp/: ulp.S
